[Collideoscope] styling fixes
 - remove sponsorship level dropdown from smidsy sponsor form
 - Add .aroundpage class for CSS display
    to help format full-width stripes on Smidsy, may be useful
    generally (as the page is *not* really a frontpage).
 - fix css bug on /my reports page
 - remove login links and user menu; show sign out links only
 - fix ugly forgotten css box on report page
 - stop sidebar notes sticking out of map page sidebar

--- a/web/cobrands/smidsy/layout.scss
+++ b/web/cobrands/smidsy/layout.scss
@@ -146,7 +146,8 @@ body.mappage {
     width: auto;
     margin-right: 10px;
 
-    ul#main-menu li a {
+    ul#main-menu li a,
+    ul#main-menu li span {
       padding: 0 12px; // to match normal pages
     }
   }
@@ -335,9 +336,12 @@ body.mappage {
   }
 }
 
-#forgotten-pw {
+#forgotten-pw,
+.general-sidebar-notes {
   position: static;
   margin: 0;
+  width: auto;
+  @include box-shadow(none);
 
   p.dark {
     background: $color-neutral-slategrey;
